refactor: use records, use imports instead of full paths, simplify toList